--- a/src/proyecto3/GraphMapping.form
+++ b/src/proyecto3/GraphMapping.form
@@ -48,6 +48,9 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="distanceB">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cf" green="e1" red="49" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Ciudad a Ciudad Distancia"/>
       </Properties>
       <Events>
@@ -56,6 +59,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="costC">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f8" green="f6" red="86" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Ciudad a Ciudad Costo"/>
       </Properties>
       <Events>
